# Trip

./: README.md  actions.py  description.py  engine.py  entity.py  input_handlers.py  pyproject.toml
components/: ai.py  base_component.py  consumable.py  inventory.py  needs.py  observation_log.py
events/: internal_events.py  map_events.py  trigger.py
example/: README.md  entity_factories.py  gather_food_harness.py  main.py  populate_island.py  tree.py
game_map/: game_map.py  island_generator.py  render_order.py  tile_types.py
harnesses/: action_in_area_harness.py  base_harness.py  do_nothing_harness.py  explore_harness.py
