[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
py_version = "310"
line_length = 120
profile = "black"
from_first = true
skip_gitignore = true

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"

[tool.vulture]
min_confidence = 80
paths = ["."]
sort_by_size = true

[tool.poetry]
name = "trip"
version = "0.1.0"
description = "Trip is the first game engine for the <this-genre-doesn't-have-a-name-yet> games"
authors = ["Qumeric <qumidium@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tcod = "^15.0.1"
numpy = "^1.24.3"
rich = "^13.3.4"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
